# AgenticAI

./: .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  test_setup.py
src/: __init__.py
src/analyzer/: agent.py  config.txt  parser.py  queries.py
src/audio/: __init__.py  recorder.py
src/llm/: __init__.py  chat.py  ollama_Client.py
src/nlp/: __init__.py  transcriber.py
src/search/: __init__.py  web_search.py
src/speak/: __init__.py  speaker.py
