[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "ffmpeg>=1.4",
    "langchain>=1.3.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "ollama>=0.6.2",
    "openai-whisper>=20250625",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
]
